--- a/.env.production.example
+++ b/.env.production.example
@@ -1,12 +1,10 @@
 # Production Environment Variables
 # Copy this to .env for production deployment
 
-# Database Configuration
-# For Docker Compose: use the service name 'db' as host
-DATABASE_URL=postgresql://postgres:your_secure_password_here@db:5432/blogdb
-
-# For external database (e.g., managed PostgreSQL):
-# DATABASE_URL=postgresql://user:password@your-db-host:5432/dbname
+# Database Configuration (Supabase)
+# Get this from your Supabase project settings -> Database -> Connection String
+# Use the "Connection Pooling" URL for better performance
+DATABASE_URL=postgresql://postgres.[PROJECT-REF]:[PASSWORD]@aws-0-[REGION].pooler.supabase.com:6543/postgres
 
 # Session Secret (REQUIRED - generate with: openssl rand -hex 32)
 SESSION_SECRET=CHANGE_THIS_TO_A_SECURE_RANDOM_STRING
@@ -14,9 +12,6 @@ SESSION_SECRET=CHANGE_THIS_TO_A_SECURE_RANDOM_STRING
 # Server Configuration
 NODE_ENV=production
 PORT=5000
-
-# PostgreSQL Password (for docker-compose)
-POSTGRES_PASSWORD=your_secure_password_here
 
 # Optional: AI API Keys (if your app uses them)
 # OPENAI_API_KEY=your_openai_key
