--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,12 @@
 version: '3.8'
 
 services:
-  # PostgreSQL Database
-  db:
-    image: postgres:16-alpine
-    container_name: blog-builder-db
-    environment:
-      POSTGRES_DB: blogdb
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-your_secure_password_here}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    restart: unless-stopped
-    networks:
-      - blog-network
-
-  # Application
   app:
     build:
       context: .
       dockerfile: Dockerfile
       target: production
     container_name: blog-builder-app
-    depends_on:
-      db:
-        condition: service_healthy
     ports:
       - "5000:5000"
     environment:
@@ -39,20 +14,15 @@ services:
       - NODE_ENV=production
       - PORT=5000
       
-      # Database connection
-      # Format: postgresql://user:password@host:port/database
-      - DATABASE_URL=postgresql://postgres:${POSTGRES_PASSWORD:-your_secure_password_here}@db:5432/blogdb
+      # Database connection (Supabase)
+      - DATABASE_URL=${DATABASE_URL}
       
-      # Session secret (MUST be set in .env file or here)
+      # Session secret (MUST be set in .env file)
       - SESSION_SECRET=${SESSION_SECRET}
       
       # Add any other environment variables your app needs
       # - OPENAI_API_KEY=${OPENAI_API_KEY}
       # - GOOGLE_AI_API_KEY=${GOOGLE_AI_API_KEY}
-    
-    # Optional: mount .env file if you prefer (but environment vars above are recommended)
-    # env_file:
-    #   - .env
     
     restart: unless-stopped
     healthcheck:
@@ -60,14 +30,4 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
-    networks:
-      - blog-network
-
-networks:
-  blog-network:
-    driver: bridge
-
-volumes:
-  postgres_data:
-    driver: local
+      start_period: 60s
