--- a/infra/buildspec.yml
+++ b/infra/buildspec.yml
@@ -19,8 +19,8 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - docker build -t aiblog .
+      - docker tag aiblog:latest 954976329295.dkr.ecr.eu-north-1.amazonaws.com/aiblog:latest
   
   post_build:
     commands:
